www/scss/public.css
/* ... */
@font-face {
  font-family: 'Flaticons Social';
  src: url("../fonts/flaticons-social/flaticons-social.eot");
  src: url("../fonts/flaticons-social/flaticons-social.eot?#iefix") format("embedded-opentype"), url("../fonts/flaticons-social/flaticons-social.woff") format("woff"), url("../fonts/flaticons-social/flaticons-social.ttf") format("truetype"), url("../fonts/flaticons-social/flaticons-social.svg#flaticons-social") format("svg"); }

.icon--16, .icon--16:before {
  display: block;
  width: 16px;
  height: 16px;
  font-size: 16px;
  line-height: 16px;
  text-align: center; }

.icon--24, .icon--24:before {
  display: block;
  width: 24px;
  height: 24px;
  font-size: 24px;
  line-height: 24px;
  text-align: center; }

.social-icon:before {
  font-family: 'Flaticons Social'; }

.flat-icon:before {
  font-family: 'Flaticons Stroke'; }

.flat-icon:before,
.social-icon:before {
  line-height: 1;
  display: block;
  vertical-align: middle;
  text-align: center;
  font-weight: normal !important;
  font-style: normal;
  -webkit-font-smoothing: antialiased; }

.icon--grey {
  color: #9E9E9E; }

.icon--green {
  color: #4CAF50; }

.icon--blue {
  color: #2196F3; }

.icon--facebook:before {
  content: '\e7d0'; }

.icon--twitter:before {
  content: '\e7d1'; }

.icon--pinterest:before {
  content: '\e7d5'; }

.icon--googleplus:before {
  content: '\e7d9'; }

.icon--linkedin:before {
  content: '\e7da'; }

.icon--arrow-up:before {
  content: '\e5b0'; }

.icon--arrow-down:before {
  content: '\e5b1'; }

.icon--arrow-left:before {
  content: '\e5b2'; }

.icon--arrow-right:before {
  content: '\e5b3'; }

.icon--cross:before {
  content: '\e5a3'; }

.icon--microscope:before {
  content: '\e45a'; }

.icon--menu:before {
  content: '\e53e'; }

.icon--maximize:before {
  content: '\e58e'; }

.icon--dropdown-arrow:before {
  content: '\e5a5'; }

.icon--play:before {
  content: '\'; }

.icon--cloud-upload:before {
  content: '\'; }

.icon--paintbrush:before {
  content: '\'; }

.icon--lightbulb:before {
  content: '\'; }

.icon--mobilephone:before {
  content: '\'; }

.icon--key:before {
  content: '\'; }

.icon--users:before {
  content: '\'; }

.icon--chart:before {
  content: '\'; }

.icon--glasses:before {
  content: '\'; }

.icon--trash:before {
  content: '\e481'; }

.icon--archive:before {
  content: '\e47a'; }

.icon--edit:before {
  content: '\e48a'; }

.icon--scan:before {
  content: '\e42e'; }

.icon--plus:before {
  content: '\e5a0'; }

.icon--minus:before {
  content: '\e5a1'; }

.icon--tick:before {
  content: '\e5a2'; }

.icon--circle-tick:before {
  content: '\e5b6'; }

.icon--circle-cross:before {
  content: '\e5b7'; }

html {
  height: 100%;
  min-width: 320px; }

.layout {
  position: relative;
  overflow-y: scroll;
  min-height: 100%;
  background: white; }

.layout__header {
  position: relative;
  z-index: 5;
  background: #1976D2;
  padding: 0 20px; }

.layout__banner {
  position: relative;
  background: #1976D2;
  overflow: hidden; }

.layout__mobile-navigation {
  user-select: none;
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 10;
  width: 100%;
  padding: 12px; }

.layout__section {
  padding: 80px 20px; }
  @media screen and (max-width: 960px) {
    .layout__section {
      padding: 64px 20px; } }

.layout__section--crowdsource {
  padding: 80px 0; }
  @media screen and (max-width: 960px) {
    .layout__section--crowdsource {
      padding: 0 0 64px; } }

.layout__section--white {
  background: white; }

.layout__section--grey {
  background: #F5F5F5; }

.layout__section--blue {
  background: #1976D2; }

.layout__customers {
  padding: 80px 0; }
  @media screen and (max-width: 960px) {
    .layout__customers {
      padding: 64px 0; } }

.layout__plans {
  padding: 80px 20px 0;
  background: white; }
  @media screen and (max-width: 960px) {
    .layout__plans {
      padding: 0px 20px 40px;
      background: #1976D2; } }

.layout__quote {
  position: relative;
  padding: 0 20px;
  background: white; }
  .layout__quote:before {
    content: '';
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 50%; }

.layout__quote--blue-to-grey {
  background: #1976D2; }
  .layout__quote--blue-to-grey:before {
    background: #F5F5F5; }

.layout__quote--white-to-grey {
  background: white; }
  .layout__quote--white-to-grey:before {
    background: #F5F5F5; }

.layout__quote--white-to-blue {
  background: white; }
  .layout__quote--white-to-blue:before {
    background: #1976D2; }

.layout__quote--grey-to-white {
  background: #F5F5F5; }
  .layout__quote--grey-to-white:before {
    background: white; }

.layout__quote--grey-to-blue {
  background: #F5F5F5; }
  .layout__quote--grey-to-blue:before {
    background: #1976D2; }

.layout__footer {
  padding: 0 20px;
  width: 100%;
  background: #F5F5F5; }

.header {
  position: relative;
  height: 72px; }
  .header:before {
    content: '';
    display: block;
    position: absolute;
    bottom: -1px;
    height: 2px;
    width: 100%;
    background: rgba(255, 255, 255, 0.2);
    border-radius: 2px; }

.header__logo {
  position: absolute;
  top: 0;
  left: 0;
  padding: 8px 0; }

@media screen and (max-width: 960px) {
  .header__navigation {
    display: none; } }

.header__auth {
  position: absolute;
  top: 0;
  right: 0; }
  @media screen and (max-width: 960px) {
    .header__auth {
      display: none; } }

.header__mobile-button {
  cursor: pointer;
  display: none;
  position: absolute;
  top: 0;
  right: -20px;
  padding: 20px;
  opacity: 0.8; }
  .header__mobile-button:active, .header__mobile-button:hover {
    opacity: 1; }
  @media screen and (max-width: 960px) {
    .header__mobile-button {
      display: block; } }

.header__mobile-navigation {
  display: none;
  position: absolute;
  top: 0;
  z-index: 100;
  width: 100%;
  padding: 16px 0; }
/* ... */

